# kava-genann

cpu/: .gitignore  Makefile  example1.c  example2.c  example3.c  example4.c  genann.h
cpu/mnist/: mnist.c  runmnist.c
gpu/: .gitignore  CMakeLists.txt  Makefile  README.md  example2.c  example3.c  example4.c  genann.h  genann_backprop_edits.cu
gpu/mnist/: mnist.h  runmnist.c
